[package]
name = "test"
version = "0.1.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = {version= "=0.7.7", features=["inline-asm"]}
# rp2040-hal = "0.10"
hd44780-driver = "0.4.0"
embedded-sdmmc = "0.5"
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0"}
# embedded-hal-async = "1.0"
embassy-embedded-hal = "0.1.0"
embassy-futures = "0.1.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.7"
# st7789 = "0.6.1"
log = "0.4"
embassy-usb-logger = "0.1.0"
embedded-hal = "1.0.0"
# nb ="1.1.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
# fatfs = "0.3.6"
# hound = "3.4.0"
# rustfft = "6.2.0"
# num-complex = "0.4" 
# rp-pico = "0.9.0"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
fugit = "0.3.7"
ag-lcd = { version = "0.2.0", features = ["i2c"] }
port-expander = "0.3.0"
# panic-halt = "0.2.0"

