[package]
name = "test2"
version = "1.0.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = {version= "=0.7.7", features=["inline-asm"]}
rp2040-hal = "0.10"
# hd44780-driver = "0.4.0"
# embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
embedded-sdmmc = "0.7"
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0"}
# embedded-hal-async = "1.0"
embassy-embedded-hal = { version = "0.1.0" }
embassy-futures = "0.1.1"
embedded-hal = "1.0.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rp-pico = "0.9.0"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
fugit = "0.3.7"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
# fatfs = { version = "0.3"}
# core_io = "0.1.20210325"
log = "0.4"
embassy-usb-logger = "0.1.0"
