[package]
name = "music_player"
version = "0.1.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = {version= "=0.7.7", features=["inline-asm"]}
embedded-sdmmc = "0.7.0"
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0"}
embassy-embedded-hal = "0.1.0"
embassy-futures = "0.1.1"
heapless = "0.7"
log = "0.4"
embassy-usb-logger = "0.1.0"
embedded-hal = "1.0.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
defmt = "0.3"
fugit = "0.3.7"
ag-lcd = { version = "0.2.0", features = ["i2c"] }
port-expander = "0.3.0"
microfft = "0.6.0"
bytemuck = "1.16.0"
micromath = "2.1.0"
fixed = "1.27.0"